@startuml


class Etablissement {
-nom : string
-slug
-description : text
-telephone : string
-adresse : string
-email : string
-image : string
-actif : bool
-accueil : bool
-createdAt : datetime
-updatedAt : datetime
}

class Ville {
-nom : string
-codePostal : string
-departement : string
-numero_departement : string
-region : string
}

class Categorie {
-nom : string
-createdAt : string
}

class User {
-prenom : string
-nom : string
-pseudo : string
-email : string
-password : string
-createdAt : datetime
-updatedAt : datetime
-role : string
-actif : bool
}

Etablissement "0..*" -- "1..*" Categorie
Etablissement "0..*" -- "1..1" Ville
Etablissement "0..*" -- "0..*" User



@enduml